# oksconfig_old

./: CMakeLists.txt  NOTICE
cmake/: oksconfigConfig.cmake.in  oksconfigConfig.cmake.in~
cmt/: requirements  test.sh
doc/: RELEASE_NOTES.tdaq-01-04-00.html  RELEASE_NOTES.tdaq-02-00-00.html  RELEASE_NOTES.tdaq-04-00-00.html
docs/: RELEASE_NOTES.tdaq-01-01-00.html  RELEASE_NOTES.tdaq-01-06-00.html  RELEASE_NOTES.tdaq-01-07-00.html  RELEASE_NOTES.tdaq-01-08-03.html  RELEASE_NOTES.tdaq-01-08-04.html
include/oksconfig/: OksConfigObject.hpp  OksConfiguration.hpp  ROksConfiguration.hpp
jsrc/oksconfig/: OksConfigObject.java  OksConfiguration.java  oksconfig_OksConfigObject.cpp  oksconfig_OksConfiguration.cpp  oksconfig_utils.cpp  oksconfig_utils.h
oksconfig/: OksConfigObject.h  OksConfiguration.h  ROksConfiguration.h
src/: OksConfigObject.cpp  OksConfiguration.cpp  ROksConfiguration.cpp
test/: Test.java  online.schema.xml  recursive2.data.xml  test2.data.xml  test_create_oksdb.cpp  test_oksdb.cpp
test/apps/: README.md  expected.output  okstest.data.xml  okstest.schema.xml  recursive.data.xml  test2.schema.xml
